[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanlord"
version = "0.1.0"
description = "Advanced GitHub-themed terminal network intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Shashank Shekhar" }
]
license = { text = "MIT" }

dependencies = [
    "textual>=0.45.0",
    "rich>=13.0.0"
]

[project.scripts]
lanlord = "lanlord.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
